# libkeepass-rs

./: Cargo.toml  README.md
.github/workflows/: rust-ci.yml
src/: compress.rs  config.rs  db.rs  hmac_block_stream.rs  lib.rs  variant_dictionary.rs  xml_parse.rs
src/crypt/: ciphers.rs
src/parse/: kdb.rs  kdbx3.rs  kdbx4.rs
tests/: entry_tests.rs  file_read_tests.rs  test_xml_writing.rs
tests/resources/: test_db_kdbx4_with_password_aes_largefile.kdbx
