[package]
name = "keepass"
description = "KeePass .kdbx database file parser"
edition = "2018"

homepage = "https://github.com/sseemayer/keepass-rs"
repository = "https://github.com/sseemayer/keepass-rs"
documentation = "https://docs.rs/keepass"

version = "0.4.9"
authors = ["Stefan Seemayer <stefan@seemayer.de>"]
license = "MIT"

readme = "README.md"

[features]
utilities = ["clap", "rpassword"]

default = []

[dependencies]
byteorder = "1"
flate2 = "1"
secstr = "0.4"
xml-rs = "0.8"
base64 = "0.13"
hex-literal = "0.3"
rust-argon2 = "0.8"
sha2 = "0.9"
aes = "0.7"
block-modes = "0.8"
hmac = "0.11"
salsa20 = "0.8"
chacha20 = "0.7"
cipher = "0.3"
twofish = "0.6"
chrono = "0.4"
num-traits = "0.2"
num-derive = "0.3"
xmltree = "0.10.3"
totp-lite = "2.0.0"
url = "2.2.2"
base32 = "0.4.0"

# dependencies for command-line utilities
clap = { version = "2.33.0", optional = true }
rpassword = { version = "5.0.1", optional = true }
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "0.2.1"

[[bin]]
name = "kp-dump-xml"
required-features = ["utilities"]

[[bin]]
name = "kp-show-db"
required-features = ["utilities"]

[[bin]]
name = "kp-show-otp"
required-features = ["utilities"]
